--- a/Meeting Agenda App/Src/ViewPollScreen.fx.yaml
+++ b/Meeting Agenda App/Src/ViewPollScreen.fx.yaml
@@ -247,6 +247,7 @@ ViewPollScreen As screen:
         BorderColor: =RGBA(0, 18, 107, 1)
         Color: =RGBA(48, 55, 120, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
+        FocusedBorderThickness: =1
         Font: =Font.Lato
         FontWeight: =FontWeight.Bold
         Height: =30
@@ -271,6 +272,7 @@ ViewPollScreen As screen:
             DisabledColor: =RGBA(166, 166, 166, 1)
             Fill: =RGBA(48, 55, 120, 1)
             FocusedBorderColor: =lblExportMeetingSubject_4.BorderColor
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             FontWeight: =FontWeight.Semibold
             Height: =50
@@ -290,6 +292,7 @@ ViewPollScreen As screen:
             ZIndex: =23
 
         imageLogo_16 As image:
+            FocusedBorderThickness: =1
             Height: =45
             Image: =logo
             TabIndex: =0
@@ -300,6 +303,7 @@ ViewPollScreen As screen:
         "'lbl_selected meeting dt & time_3' As label":
             Color: =RGBA(255, 255, 255, 1)
             FocusedBorderColor: ='lbl_selected meeting dt & time_3'.BorderColor
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             Height: =50
             HoverBorderColor: ='lbl_selected meeting dt & time_3'.BorderColor
@@ -321,6 +325,7 @@ ViewPollScreen As screen:
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
             FocusedBorderColor: ='lbl_selected meeting sub._3'.BorderColor
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             FontWeight: =FontWeight.Bold
             Height: =49
@@ -340,6 +345,7 @@ ViewPollScreen As screen:
 
         Icon_back_3 As icon.ArrowLeft:
             Color: =RGBA(255, 255, 255, 1)
+            FocusedBorderThickness: =1
             Height: =35
             Icon: =Icon.ArrowLeft
             OnSelect: =Back()
@@ -352,6 +358,7 @@ ViewPollScreen As screen:
         "'lbl_version no.._3' As label":
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             Height: =46
             Size: =14
