--- a/Meeting Agenda App/Src/FollowUpTimesScreen.fx.yaml
+++ b/Meeting Agenda App/Src/FollowUpTimesScreen.fx.yaml
@@ -963,6 +963,7 @@ FollowUpTimesScreen As screen:
         rectTopMenu_11 As rectangle:
             AccessibleLabel: ="rectTopMenu"
             Fill: =RGBA(48, 55, 120, 1)
+            FocusedBorderThickness: =1
             Height: =43
             TabIndex: =0
             Width: =1366
@@ -970,6 +971,7 @@ FollowUpTimesScreen As screen:
 
         imageLogo_11 As image:
             AccessibleLabel: ="imageLogo"
+            FocusedBorderThickness: =1
             Height: =43
             Image: =logo
             TabIndex: =0
@@ -978,6 +980,7 @@ FollowUpTimesScreen As screen:
         Icon_Back_1 As icon.ArrowLeft:
             AccessibleLabel: ="Icon_Back"
             Color: =RGBA(255, 255, 255, 1)
+            FocusedBorderThickness: =1
             Height: =30
             Icon: =Icon.ArrowLeft
             OnSelect: =Navigate(FollowUpScreen, ScreenTransition.None)
@@ -991,6 +994,7 @@ FollowUpTimesScreen As screen:
         "'Version No.' As label":
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             Size: =14
             TabIndex: =0
